Elastic interpolation ignores amplitude below 10.0 #39405

Closed
opened 2014-03-25 06:51:50 +01:00 by Campbell Barton · 8 comments

See the attached file. change the amplitude of the active keyframe. elastic_amplitude.blend

In this example its quite reasonable you would want a smaller amplitude too.

See the attached file. change the amplitude of the active keyframe. [elastic_amplitude.blend](https://archive.blender.org/developer/F82470/elastic_amplitude.blend) In this example its quite reasonable you would want a smaller amplitude too.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Campbell Barton 2014-03-25 06:51:50 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mont29

Added subscriber: @mont29
Member

Checking the code, it appears that it's not a hardcoded 10.0 limit, but rather a limit that the amplitude must not be less than the change between the keyframes.

If that is what's required for the function to work correctly, perhaps we just need to modify the way the amplitude parameter works (i.e. how we pass it in) by doing:

 "amplitude" = change + fcu->amplitude
Checking the code, it appears that it's not a hardcoded 10.0 limit, but rather a limit that the amplitude must not be less than the change between the keyframes. If that is what's required for the function to work correctly, perhaps we just need to modify the way the amplitude parameter works (i.e. how we pass it in) by doing: ``` "amplitude" = change + fcu->amplitude

This issue was referenced by blender/blender-addons-contrib@ed775edeeb

This issue was referenced by blender/blender-addons-contrib@ed775edeeb489e4710bb685a5fd47b16102eb87a

This issue was referenced by ed775edeeb

This issue was referenced by ed775edeeb489e4710bb685a5fd47b16102eb87a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit ed775edeeb.

Closed by commit ed775edeeb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39405
No description provided.